--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,11 @@
     "description": "A coroutine framework that focuses on hyperspeed and flexible, specifically use for build microservices and middlewares.",
     "license": "Apache-2.0",
     "require": {
-        "php": ">=8.1",
+        "php": ">=8.1 <8.4",
         "hyperf/cache": "~3.1.0",
         "hyperf/command": "~3.1.0",
         "hyperf/config": "~3.1.0",
+        "hyperf/database": "~3.1.0",
         "hyperf/db-connection": "~3.1.0",
         "hyperf/engine": "^2.10",
         "hyperf/framework": "~3.1.0",
@@ -24,7 +25,8 @@
         "hyperf/logger": "~3.1.0",
         "hyperf/memory": "~3.1.0",
         "hyperf/process": "~3.1.0",
-        "hyperf/database": "~3.1.0"
+        "hyperf/validation": "^3.1",
+        "ramsey/uuid": "^4.9"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
