--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,13 @@ services:
         MYSQL_ROOT_HOST: '%'
         MYSQL_DATABASE: '${DB_DATABASE}'
         MYSQL_PASSWORD: '${DB_PASSWORD}'
+  mailhog:
+    image: mailhog/mailhog
+    ports:
+      - "8025:8025"
+      - "1025:1025"
+    networks:
+      - default
 networks:
   default:
     name: hyperf
